[package]
name = "bfs"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[features]
default = [
    "i32-coords",
    "neighbors-ignore-bounds",
]
unsafe-indexing = []
alloc-state-once = []
neighbors-ignore-bounds = []
i32-coords = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort" # Looks like this feature boosts performance most

[dependencies]