[package]
name = "bfs"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[features]
default = [
    "neighbors-ignore-bounds",
]
unsafe-indexing = []
neighbors-ignore-bounds = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort" # Looks like this feature boosts performance most

[dependencies]