[package]
name = "bfs"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[features]
default = []
unsafe-indexing = []
neighbors-ignore-bounds = []
hacky-collections = []
point-index = []
hacky-visited = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort" # Looks like this feature boosts performance most

[dependencies]